<resources>
    <string name="app_name">TrashCalc</string>

    <string name="navigation_drawer_open">Отвори Меню</string>
    <string name="navigation_drawer_close">Затвори Меню</string>

    <string name="action_exit">Изход</string>
    <string name="scann">Включи сканер</string>
    <string name="insert_new_user">Въведи нов потребител</string>
    <string name="get_report">Зареди Доклад</string>
    <string name="profile_image">profileImage</string>
    <string name="google_account">guest account</string>
    <string name="guest">Guest</string>
    <string name="no_scanning_data">Няма данни от сканирането!</string>
    <string name="please_wait">Моля, изчакайте . . .</string>
    <string name="entered_trash_weight">Въведи тегло на пълен камион</string>
    <string name="empty_trash_weight">Въведи тегло на празен камион</string>
    <string name="hand_made">Задръж за да въведеш ръчно</string>
    <string name="title_activity_report">Report</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">TrashCalc</string>

    <string name="action_settings">Settings</string>
    <string name="loading_screen_title">Зареждане на данни!</string>
    <string name="loading_screen_text">Моля, изчакайте . . .</string>
</resources>
